created auth requests features